--- a/report/sources.bib
+++ b/report/sources.bib
@@ -60,6 +60,15 @@
   year={2001}
 }
 
+@inproceedings{flickr,
+  title={A measurement-driven analysis of information propagation in the flickr social network},
+  author={Cha, M. and Mislove, A. and Gummadi, K.P.},
+  booktitle={Proceedings of the 18th international conference on World wide web},
+  pages={721--730},
+  year={2009},
+  organization={ACM}
+}
+
 @inproceedings{marketing2,
   title={Maximizing the spread of influence through a social network},
   author={Kempe, D. and Kleinberg, J. and Tardos, {\'E}.},
